# py-grpcio

./: .gitignore  LICENSE  README.md  pyproject.toml
example/base/client/proto/: example_service.proto
example/base/server/: server.py
example/base/server/service/: __init__.py
example/bytes/server/service/: enums.py  main.py
example/bytes_client/: bytes_client.py
example/bytes_client/services/bytes/: __init__.py  base.py  models.py
example/bytes_server/: bytes_server.py
example/bytes_server/proto/: bytes_service.proto
example/bytes_server/service/: __init__.py  base.py  main.py
example/client/: client.py
example/client/core/: __init__.py  service.py
example/client/proto/: example_service.proto
example/client/services/example/: __init__.py  (+2 more)
example/server/: server.py
example/server/core/: __init__.py  models.py  service.py
example/server/service/: __init__.py  base.py  main.py  models.py
example/stream_client/: stream_client.py
example/stream_client/proto/: stream_service.proto
example/stream_server/: stream_server.py
example/stream_server/service/: __init__.py  base.py  main.py  models.py
py_grpcio/: __init__.py  __meta__.py  enums.py  exceptions.py  interceptor.py  method.py  middleware.py  models.py  server.py  service.py  service_meta.py  utils.py
py_grpcio/method/: __init__.py  base.py  client.py  server.py
py_grpcio/proto/: __init__.py  enums.py  parser.py
py_grpcio/proto/templates/: service.proto.jinja2  service.proto.template
py_grpcio/server/: __init__.py  base.py
py_grpcio/service/: __init__.py  base.py  meta.py
(+4 files in other folders)
