[tool.poetry]
name = "py-grpcio"
version = "1.8.0"
description = "gRPC with autogen by Pydantic models"
authors = ["Yurii <ykolibroda@lytvynov-production.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "py_grpcio" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "<3.0.0"
grpc-interceptor = "^0.15.4"
jinja2 = "^3.1.3"
loguru = "^0.7.2"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
